# liferay-workspace-updater

./: .gitignore  Cargo.toml  README.md  formula.rb.example  scoop.json.example  todo.md
.cargo/: config.toml
.gemini/prompts/: setup-new-tool.md  update-distribution-channels.md
.githooks/: pre-commit
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
src/core/: env.rs  mod.rs
src/utils/: git.rs  mod.rs  network.rs  properties.rs  xml.rs
