[package]
name = "lfr-tool-template"
version = "0.4.0"
edition = "2021"
authors = ["Peter Richards"]
description = "A modular template for Liferay Rust CLI tools with Workspace, LXC, and Client Extension support."

[dependencies]
# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# XML Processing (Crucial for Tomcat/Liferay configs)
edit-xml = "0.1"

# Error handling
anyhow = "1.0"

# Configuration & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"    # Timestamps for logs/backups

# Optional dependencies for features
reqwest = { version = "0.11", features = ["blocking"], optional = true }
scraper = { version = "0.18", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = []
web = ["reqwest", "scraper"]
yaml = ["serde_yaml"]

[dev-dependencies]
tempfile = "3.8"
