[package]
name = "lwu"
version = "1.0.2"
edition = "2021"
authors = ["Peter Richards"]
description = "A CLI tool to automatically update the Liferay Workspace Gradle plugin to its latest version"

[dependencies]
# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# XML Processing (Crucial for Tomcat/Liferay configs)
roxmltree = "0.19"

# Error handling
anyhow = "1.0"

# Configuration & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"    # Timestamps for logs/backups
regex = "1.10"    # For parsing Gradle files

# Optional dependencies for features
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
scraper = { version = "0.18", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = ["web"]
web = ["reqwest", "scraper"]
yaml = ["serde_yaml"]

[dev-dependencies]
tempfile = "3.8"
